trunk/JavaCompiler/ProjetoOurJavaCompiler - Fase1/Analisadores_Sintatico_Lexico/Codigo_fonte/sintatico.output
State 9 conflicts: 9 shift/reduce
State 73 conflicts: 24 shift/reduce
State 77 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 146 conflicts: 27 reduce/reduce
State 147 conflicts: 24 shift/reduce
State 148 conflicts: 9 shift/reduce
State 175 conflicts: 1 shift/reduce, 1 reduce/reduce
State 198 conflicts: 1 shift/reduce
State 257 conflicts: 1 shift/reduce
State 262 conflicts: 1 shift/reduce, 3 reduce/reduce
State 264 conflicts: 3 reduce/reduce
State 277 conflicts: 6 reduce/reduce
State 314 conflicts: 1 shift/reduce
State 337 conflicts: 2 shift/reduce, 3 reduce/reduce
State 378 conflicts: 1 shift/reduce
State 399 conflicts: 2 shift/reduce, 3 reduce/reduce
State 400 conflicts: 24 shift/reduce
State 402 conflicts: 2 shift/reduce
State 425 conflicts: 3 reduce/reduce
State 426 conflicts: 2 shift/reduce, 3 reduce/reduce
State 428 conflicts: 27 reduce/reduce
State 429 conflicts: 2 shift/reduce


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: class_declaration

    2 class_declaration: CLASS identifier class_body

    3 identifier: ID

    4 class_body: BEG class_body_declaration END

    5 class_body_declaration: class_member_declaration_opt static_initializer class_member_declaration_opt

    6 static_initializer: PUBLIC STATIC VOID MAIN OPEN_PAREN TYPE_STRING OPEN_COLC CLOSE_COLC ARGS CLOSE_PAREN block

    7 block: BEG block_statements END

    8 block_statements: block_statement block_statements_
    9                 | block_statements_

   10 block_statements_: block_statement block_statements_
   11                  | /* empty */

   12 block_statement: local_variable_declaration_statement
   13                | statement

   14 local_variable_declaration_statement: local_variable_declaration PT_VIRGULA local_variable_declaration_

   15 local_variable_declaration_: local_variable_declaration PT_VIRGULA
   16                            | /* empty */

   17 local_variable_declaration: primitive_type variable_declarators
   18                           | primitive_type OPEN_COLC CLOSE_COLC variable_declarators

   19 primitive_type: numeric_type
   20               | TYPE_BOOL
   21               | TYPE_STRING

   22 numeric_type: integral_type
   23             | floating_point_type

   24 integral_type: TYPE_BYTE
   25              | TYPE_SHORT
   26              | TYPE_INT
   27              | TYPE_LONG
   28              | TYPE_CHAR

   29 floating_point_type: TYPE_FLOAT
   30                    | TYPE_DOUBLE

   31 variable_declarators: variable_declarator variable_declarators_

   32 variable_declarator: variable_declarator_id variable_declarator_

   33 variable_declarators_: VIRGULA variable_declarator variable_declarators_
   34                      | /* empty */

   35 variable_declarator_: EQUAL variable_initializer
   36                     | /* empty */

   37 variable_declarator_id: identifier

   38 variable_initializer: assignment_expression
   39                     | array_initializer
   40                     | left_hand_side

   41 array_initializer: BEG variable_initializers virgula_opt END
   42                  | array_creation_expression

   43 virgula_opt: VIRGULA
   44            | /* empty */

   45 variable_initializers: variable_initializer variable_initializers_
   46                      | variable_initializers_

   47 variable_initializers_: VIRGULA variable_initializer variable_initializers_
   48                       | /* empty */

   49 expression: assignment_expression

   50 assignment_expression: conditional_expression

   51 field_access: identifier POINT identifier

   52 left_hand_side: field_access
   53               | array_access

   54 assignment_operator: EQUAL
   55                    | ARITH_ASSIGN
   56                    | SHIFT_ASSIGN
   57                    | LOGIC_ASSIGN

   58 array_access: primary_no_new_array OPEN_COLC expression CLOSE_COLC

   59 primary_no_new_array: LITERAL
   60                     | field_access
   61                     | method_invocation
   62                     | array_access
   63                     | identifier

   64 argument_list: expression argument_list_
   65              | argument_list_

   66 argument_list_: VIRGULA expression argument_list_
   67               | /* empty */

   68 array_creation_expression: NEW primitive_type dim_exprs dims

   69 dim_exprs: OPEN_COLC dim_expr_or_empty CLOSE_COLC

   70 dim_expr_or_empty: expression
   71                  | /* empty */

   72 dims: dim_exprs
   73     | /* empty */

   74 conditional_expression: conditional_or_expression
   75                       | OPEN_PAREN conditional_or_expression CLOSE_PAREN conditional_opt
   76                       | conditional_or_expression QUESTION_MARK conditional_expression TWO_POINTS conditional_expression
   77                       | OPEN_PAREN conditional_or_expression CLOSE_PAREN QUESTION_MARK conditional_expression TWO_POINTS conditional_expression

   78 conditional_opt: conditional_or_expression_
   79                | conditional_and_expression_
   80                | inclusive_or_expression_
   81                | exclusive_or_expression_
   82                | and_expression_
   83                | equality_expression_
   84                | relational_expression_
   85                | shift_expression_
   86                | additive_expression_
   87                | multiplicative_expression_
   88                | /* empty */

   89 conditional_or_expression: conditional_and_expression conditional_or_expression_
   90                          | conditional_and_expression OPEN_PAREN conditional_expression CLOSE_PAREN

   91 conditional_or_expression_: OR_LOGIC conditional_and_expression conditional_or_expression_
   92                           | /* empty */

   93 conditional_and_expression: inclusive_or_expression conditional_and_expression_
   94                           | inclusive_or_expression OPEN_PAREN conditional_expression CLOSE_PAREN

   95 conditional_and_expression_: AND_LOGIC inclusive_or_expression conditional_and_expression_
   96                            | /* empty */

   97 inclusive_or_expression: exclusive_or_expression inclusive_or_expression_
   98                        | exclusive_or_expression OPEN_PAREN conditional_expression CLOSE_PAREN

   99 inclusive_or_expression_: OR exclusive_or_expression inclusive_or_expression_
  100                         | /* empty */

  101 exclusive_or_expression: and_expression exclusive_or_expression_
  102                        | and_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  103 exclusive_or_expression_: OR_EXC and_expression exclusive_or_expression_
  104                         | /* empty */

  105 and_expression: equality_expression and_expression_
  106               | equality_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  107 and_expression_: AND equality_expression and_expression_
  108                | /* empty */

  109 equality_expression: relational_expression equality_expression_
  110                    | relational_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  111 equality_expression_: EQUALOP relational_expression equality_expression_
  112                     | /* empty */

  113 relational_expression: shift_expression relational_expression_
  114                      | shift_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  115 relational_expression_: RELOP shift_expression relational_expression_
  116                       | /* empty */

  117 shift_expression: additive_expression shift_expression_
  118                 | additive_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  119 shift_expression_: SHIFTS additive_expression shift_expression_
  120                  | /* empty */

  121 additive_expression: multiplicative_expression additive_expression_
  122                    | multiplicative_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  123 additive_expression_: PLUS multiplicative_expression additive_expression_
  124                     | MINUS multiplicative_expression additive_expression_
  125                     | /* empty */

  126 multiplicative_expression: unary_expression multiplicative_expression_
  127                          | unary_expression OPEN_PAREN conditional_expression CLOSE_PAREN

  128 multiplicative_expression_: MULT unary_expression multiplicative_expression_
  129                           | DIV unary_expression multiplicative_expression_
  130                           | MOD unary_expression multiplicative_expression_
  131                           | /* empty */

  132 unary_expression: INCREMENT unary_expression
  133                 | DECREMENT unary_expression
  134                 | PLUS unary_expression
  135                 | MINUS unary_expression
  136                 | postfix_expression
  137                 | NOT unary_expression
  138                 | NOT_BIT unary_expression
  139                 | cast_expression
  140                 | OPEN_PAREN conditional_expression CLOSE_PAREN

  141 cast_expression: OPEN_PAREN primitive_type CLOSE_PAREN unary_expression
  142                | OPEN_PAREN reference_type CLOSE_PAREN unary_expression_not_plus_minus

  143 reference_type: class_type
  144               | array_type

  145 class_type: identifier

  146 array_type: primitive_type OPEN_COLC CLOSE_COLC

  147 unary_expression_not_plus_minus: postfix_expression
  148                                | NOT_BIT unary_expression
  149                                | NOT unary_expression
  150                                | cast_expression

  151 postfix_expression: primary_no_new_array postfix_expression_

  152 postfix_expression_: INCREMENT postfix_expression_
  153                    | DECREMENT postfix_expression_
  154                    | /* empty */

  155 statement: statement_without_trailing_substatement
  156          | identifier TWO_POINTS statement
  157          | IF OPEN_PAREN expression CLOSE_PAREN optional_else
  158          | WHILE OPEN_PAREN expression CLOSE_PAREN statement
  159          | FOR OPEN_PAREN for_init PT_VIRGULA expression_opt PT_VIRGULA for_update_opt CLOSE_PAREN statement

  160 optional_else: statement
  161              | statement_no_short_if ELSE statement

  162 for_init: statement_expression_list
  163         | local_variable_declaration
  164         | /* empty */

  165 statement_expression_list: statement_expression statement_expression_list_

  166 statement_expression_list_: VIRGULA statement_expression statement_expression_list_
  167                           | /* empty */

  168 statement_expression: primary_no_new_array assignment_operator assignment_expression
  169                     | preincrement_expression
  170                     | post_incr_decrement_expression
  171                     | predecrement_expression

  172 preincrement_expression: INCREMENT unary_expression

  173 post_incr_decrement_expression: postfix_expression

  174 predecrement_expression: DECREMENT unary_expression

  175 method_invocation: identifier OPEN_PAREN argument_list CLOSE_PAREN
  176                  | field_access OPEN_PAREN argument_list CLOSE_PAREN
  177                  | LITERAL POINT identifier OPEN_PAREN argument_list CLOSE_PAREN

  178 expression_opt: expression
  179               | /* empty */

  180 for_update: statement_expression_list

  181 for_update_opt: for_update
  182               | /* empty */

  183 statement_without_trailing_substatement: block
  184                                        | empty_statement
  185                                        | expression_statement
  186                                        | switch_statement
  187                                        | do_statement
  188                                        | break_statement
  189                                        | continue_statement
  190                                        | goto_statement
  191                                        | return_statement

  192 empty_statement: PT_VIRGULA

  193 expression_statement: statement_expression PT_VIRGULA

  194 switch_statement: SWITCH OPEN_PAREN expression CLOSE_PAREN switch_block

  195 switch_block: BEG switch_block_statement_groups switch_labels END

  196 switch_block_statement_groups: switch_block_statement_group switch_block_statement_groups_
  197                              | switch_block_statement_groups_

  198 switch_block_statement_groups_: switch_block_statement_group switch_block_statement_groups_
  199                               | /* empty */

  200 switch_block_statement_group: switch_labels block_statements

  201 switch_labels: switch_label switch_labels_
  202              | switch_labels_

  203 switch_labels_: switch_label switch_labels_
  204               | /* empty */

  205 switch_label: CASE expression TWO_POINTS
  206             | DEFAULT TWO_POINTS

  207 do_statement: DO statement WHILE OPEN_PAREN expression CLOSE_PAREN PT_VIRGULA

  208 break_statement: BREAK identifier_opt PT_VIRGULA

  209 continue_statement: CONTINUE identifier_opt PT_VIRGULA

  210 goto_statement: GOTO identifier_opt PT_VIRGULA

  211 return_statement: RETURN expression_opt PT_VIRGULA

  212 identifier_opt: identifier
  213               | /* empty */

  214 statement_no_short_if: statement_without_trailing_substatement
  215                      | identifier TWO_POINTS statement_no_short_if
  216                      | IF OPEN_PAREN expression CLOSE_PAREN statement_no_short_if ELSE statement_no_short_if
  217                      | WHILE OPEN_PAREN expression CLOSE_PAREN statement_no_short_if
  218                      | FOR OPEN_PAREN for_init PT_VIRGULA expression_opt PT_VIRGULA for_update_opt CLOSE_PAREN statement_no_short_if

  219 class_member_declaration_opt: class_member_declaration class_member_declaration_
  220                             | /* empty */

  221 class_member_declaration_: class_member_declaration class_member_declaration_
  222                          | /* empty */

  223 class_member_declaration: STATIC field_or_method_declaration

  224 field_or_method_declaration: field_declaration
  225                            | method_declaration

  226 method_declaration: method_header method_body

  227 method_header: result_type method_declarator

  228 result_type: primitive_type
  229            | array_type
  230            | VOID

  231 method_declarator: identifier OPEN_PAREN formal_parameter_list CLOSE_PAREN

  232 method_body: block
  233            | PT_VIRGULA
  234            | /* empty */

  235 formal_parameter_list: formal_parameter formal_parameter_list_
  236                      | formal_parameter_list_

  237 formal_parameter_list_: VIRGULA formal_parameter formal_parameter_list_
  238                       | /* empty */

  239 formal_parameter: primitive_type variable_declarator_id
  240                 | array_type variable_declarator_id

  241 field_declaration: field_modifiers_ primitive_type variable_declarators PT_VIRGULA
  242                  | field_modifiers_ primitive_type OPEN_COLC CLOSE_COLC variable_declarators PT_VIRGULA

  243 field_modifiers_: field_modifier field_modifiers_
  244                 | /* empty */

  245 field_modifier: FINAL
  246               | TRANSIENT
  247               | VOLATILE


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASS (258) 2
BEG (259) 4 7 41 195
END (260) 4 7 41 195
STATIC (261) 6 223
PT_VIRGULA (262) 14 15 159 192 193 207 208 209 210 211 218 233 241
    242
OPEN_COLC (263) 6 18 58 69 146 242
CLOSE_COLC (264) 6 18 58 69 146 242
EQUAL (265) 35 54
VIRGULA (266) 33 43 47 66 166 237
POINT (267) 51 177
QUESTION_MARK (268) 76 77
TWO_POINTS (269) 76 77 156 205 206 215
OR_LOGIC (270) 91
AND_LOGIC (271) 95
OPEN_PAREN (272) 6 75 77 90 94 98 102 106 110 114 118 122 127 140 141
    142 157 158 159 175 176 177 194 207 216 217 218 231
CLOSE_PAREN (273) 6 75 77 90 94 98 102 106 110 114 118 122 127 140
    141 142 157 158 159 175 176 177 194 207 216 217 218 231
NEW (274) 68
OR (275) 99
OR_EXC (276) 103
AND (277) 107
PLUS (278) 123 134
MINUS (279) 124 135
MULT (280) 128
DIV (281) 129
MOD (282) 130
INCREMENT (283) 132 152 172
DECREMENT (284) 133 153 174
NOT (285) 137 149
NOT_BIT (286) 138 148
FOR (287) 159 218
IF (288) 157 216
ELSE (289) 161 216
WHILE (290) 158 207 217
CASE (291) 205
SWITCH (292) 194
DEFAULT (293) 206
DO (294) 207
BREAK (295) 208
CONTINUE (296) 209
GOTO (297) 210
RETURN (298) 211
VOID (299) 6 230
MAIN (300) 6
ARGS (301) 6
PUBLIC (302) 6
TYPE_INT (303) 26
TYPE_SHORT (304) 25
TYPE_LONG (305) 27
TYPE_BYTE (306) 24
TYPE_BOOL (307) 20
TYPE_FLOAT (308) 29
TYPE_DOUBLE (309) 30
TYPE_CHAR (310) 28
TYPE_STRING (311) 6 21
FINAL (312) 245
TRANSIENT (313) 246
VOLATILE (314) 247
ID (315) 3
SHIFT_ASSIGN (316) 56
ARITH_ASSIGN (317) 55
LOGIC_ASSIGN (318) 57
LITERAL (319) 59 177
EQUALOP (320) 111
RELOP (321) 115
SHIFTS (322) 119


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
compilation_unit (69)
    on left: 1, on right: 0
class_declaration (70)
    on left: 2, on right: 1
identifier (71)
    on left: 3, on right: 2 37 51 63 145 156 175 177 212 215 231
class_body (72)
    on left: 4, on right: 2
class_body_declaration (73)
    on left: 5, on right: 4
static_initializer (74)
    on left: 6, on right: 5
block (75)
    on left: 7, on right: 6 183 232
block_statements (76)
    on left: 8 9, on right: 7 200
block_statements_ (77)
    on left: 10 11, on right: 8 9 10
block_statement (78)
    on left: 12 13, on right: 8 10
local_variable_declaration_statement (79)
    on left: 14, on right: 12
local_variable_declaration_ (80)
    on left: 15 16, on right: 14
local_variable_declaration (81)
    on left: 17 18, on right: 14 15 163
primitive_type (82)
    on left: 19 20 21, on right: 17 18 68 141 146 228 239 241 242
numeric_type (83)
    on left: 22 23, on right: 19
integral_type (84)
    on left: 24 25 26 27 28, on right: 22
floating_point_type (85)
    on left: 29 30, on right: 23
variable_declarators (86)
    on left: 31, on right: 17 18 241 242
variable_declarator (87)
    on left: 32, on right: 31 33
variable_declarators_ (88)
    on left: 33 34, on right: 31 33
variable_declarator_ (89)
    on left: 35 36, on right: 32
variable_declarator_id (90)
    on left: 37, on right: 32 239 240
variable_initializer (91)
    on left: 38 39 40, on right: 35 45 47
array_initializer (92)
    on left: 41 42, on right: 39
virgula_opt (93)
    on left: 43 44, on right: 41
variable_initializers (94)
    on left: 45 46, on right: 41
variable_initializers_ (95)
    on left: 47 48, on right: 45 46 47
expression (96)
    on left: 49, on right: 58 64 66 70 157 158 178 194 205 207 216
    217
assignment_expression (97)
    on left: 50, on right: 38 49 168
field_access (98)
    on left: 51, on right: 52 60 176
left_hand_side (99)
    on left: 52 53, on right: 40
assignment_operator (100)
    on left: 54 55 56 57, on right: 168
array_access (101)
    on left: 58, on right: 53 62
primary_no_new_array (102)
    on left: 59 60 61 62 63, on right: 58 151 168
argument_list (103)
    on left: 64 65, on right: 175 176 177
argument_list_ (104)
    on left: 66 67, on right: 64 65 66
array_creation_expression (105)
    on left: 68, on right: 42
dim_exprs (106)
    on left: 69, on right: 68 72
dim_expr_or_empty (107)
    on left: 70 71, on right: 69
dims (108)
    on left: 72 73, on right: 68
conditional_expression (109)
    on left: 74 75 76 77, on right: 50 76 77 90 94 98 102 106 110 114
    118 122 127 140
conditional_opt (110)
    on left: 78 79 80 81 82 83 84 85 86 87 88, on right: 75
conditional_or_expression (111)
    on left: 89 90, on right: 74 75 76 77
conditional_or_expression_ (112)
    on left: 91 92, on right: 78 89 91
conditional_and_expression (113)
    on left: 93 94, on right: 89 90 91
conditional_and_expression_ (114)
    on left: 95 96, on right: 79 93 95
inclusive_or_expression (115)
    on left: 97 98, on right: 93 94 95
inclusive_or_expression_ (116)
    on left: 99 100, on right: 80 97 99
exclusive_or_expression (117)
    on left: 101 102, on right: 97 98 99
exclusive_or_expression_ (118)
    on left: 103 104, on right: 81 101 103
and_expression (119)
    on left: 105 106, on right: 101 102 103
and_expression_ (120)
    on left: 107 108, on right: 82 105 107
equality_expression (121)
    on left: 109 110, on right: 105 106 107
equality_expression_ (122)
    on left: 111 112, on right: 83 109 111
relational_expression (123)
    on left: 113 114, on right: 109 110 111
relational_expression_ (124)
    on left: 115 116, on right: 84 113 115
shift_expression (125)
    on left: 117 118, on right: 113 114 115
shift_expression_ (126)
    on left: 119 120, on right: 85 117 119
additive_expression (127)
    on left: 121 122, on right: 117 118 119
additive_expression_ (128)
    on left: 123 124 125, on right: 86 121 123 124
multiplicative_expression (129)
    on left: 126 127, on right: 121 122 123 124
multiplicative_expression_ (130)
    on left: 128 129 130 131, on right: 87 126 128 129 130
unary_expression (131)
    on left: 132 133 134 135 136 137 138 139 140, on right: 126 127
    128 129 130 132 133 134 135 137 138 141 148 149 172 174
cast_expression (132)
    on left: 141 142, on right: 139 150
reference_type (133)
    on left: 143 144, on right: 142
class_type (134)
    on left: 145, on right: 143
array_type (135)
    on left: 146, on right: 144 229 240
unary_expression_not_plus_minus (136)
    on left: 147 148 149 150, on right: 142
postfix_expression (137)
    on left: 151, on right: 136 147 173
postfix_expression_ (138)
    on left: 152 153 154, on right: 151 152 153
statement (139)
    on left: 155 156 157 158 159, on right: 13 156 158 159 160 161
    207
optional_else (140)
    on left: 160 161, on right: 157
for_init (141)
    on left: 162 163 164, on right: 159 218
statement_expression_list (142)
    on left: 165, on right: 162 180
statement_expression_list_ (143)
    on left: 166 167, on right: 165 166
statement_expression (144)
    on left: 168 169 170 171, on right: 165 166 193
preincrement_expression (145)
    on left: 172, on right: 169
post_incr_decrement_expression (146)
    on left: 173, on right: 170
predecrement_expression (147)
    on left: 174, on right: 171
method_invocation (148)
    on left: 175 176 177, on right: 61
expression_opt (149)
    on left: 178 179, on right: 159 211 218
for_update (150)
    on left: 180, on right: 181
for_update_opt (151)
    on left: 181 182, on right: 159 218
statement_without_trailing_substatement (152)
    on left: 183 184 185 186 187 188 189 190 191, on right: 155 214
empty_statement (153)
    on left: 192, on right: 184
expression_statement (154)
    on left: 193, on right: 185
switch_statement (155)
    on left: 194, on right: 186
switch_block (156)
    on left: 195, on right: 194
switch_block_statement_groups (157)
    on left: 196 197, on right: 195
switch_block_statement_groups_ (158)
    on left: 198 199, on right: 196 197 198
switch_block_statement_group (159)
    on left: 200, on right: 196 198
switch_labels (160)
    on left: 201 202, on right: 195 200
switch_labels_ (161)
    on left: 203 204, on right: 201 202 203
switch_label (162)
    on left: 205 206, on right: 201 203
do_statement (163)
    on left: 207, on right: 187
break_statement (164)
    on left: 208, on right: 188
continue_statement (165)
    on left: 209, on right: 189
goto_statement (166)
    on left: 210, on right: 190
return_statement (167)
    on left: 211, on right: 191
identifier_opt (168)
    on left: 212 213, on right: 208 209 210
statement_no_short_if (169)
    on left: 214 215 216 217 218, on right: 161 215 216 217 218
class_member_declaration_opt (170)
    on left: 219 220, on right: 5
class_member_declaration_ (171)
    on left: 221 222, on right: 219 221
class_member_declaration (172)
    on left: 223, on right: 219 221
field_or_method_declaration (173)
    on left: 224 225, on right: 223
method_declaration (174)
    on left: 226, on right: 225
method_header (175)
    on left: 227, on right: 226
result_type (176)
    on left: 228 229 230, on right: 227
method_declarator (177)
    on left: 231, on right: 227
method_body (178)
    on left: 232 233 234, on right: 226
formal_parameter_list (179)
    on left: 235 236, on right: 231
formal_parameter_list_ (180)
    on left: 237 238, on right: 235 236 237
formal_parameter (181)
    on left: 239 240, on right: 235 237
field_declaration (182)
    on left: 241 242, on right: 224
field_modifiers_ (183)
    on left: 243 244, on right: 241 242 243
field_modifier (184)
    on left: 245 246 247, on right: 243


state 0

    0 $accept: . compilation_unit $end
    1 compilation_unit: . class_declaration
    2 class_declaration: . CLASS identifier class_body

    CLASS  shift, and go to state 1

    compilation_unit   go to state 2
    class_declaration  go to state 3


state 1

    2 class_declaration: CLASS . identifier class_body
    3 identifier: . ID

    ID  shift, and go to state 4

    identifier  go to state 5


state 2

    0 $accept: compilation_unit . $end

    $end  shift, and go to state 6


state 3

    1 compilation_unit: class_declaration .

    $default  reduce using rule 1 (compilation_unit)


state 4

    3 identifier: ID .

    $default  reduce using rule 3 (identifier)


state 5

    2 class_declaration: CLASS identifier . class_body
    4 class_body: . BEG class_body_declaration END

    BEG  shift, and go to state 7

    class_body  go to state 8


state 6

    0 $accept: compilation_unit $end .

    $default  accept


state 7

    4 class_body: BEG . class_body_declaration END
    5 class_body_declaration: . class_member_declaration_opt static_initializer class_member_declaration_opt
  219 class_member_declaration_opt: . class_member_declaration class_member_declaration_
  220                             | .  [PUBLIC]
  223 class_member_declaration: . STATIC field_or_method_declaration

    STATIC  shift, and go to state 9

    $default  reduce using rule 220 (class_member_declaration_opt)

    class_body_declaration        go to state 10
    class_member_declaration_opt  go to state 11
    class_member_declaration      go to state 12


state 8

    2 class_declaration: CLASS identifier class_body .

    $default  reduce using rule 2 (class_declaration)


state 9

   19 primitive_type: . numeric_type
   20               | . TYPE_BOOL
   21               | . TYPE_STRING
   22 numeric_type: . integral_type
   23             | . floating_point_type
   24 integral_type: . TYPE_BYTE
   25              | . TYPE_SHORT
   26              | . TYPE_INT
   27              | . TYPE_LONG
   28              | . TYPE_CHAR
   29 floating_point_type: . TYPE_FLOAT
   30                    | . TYPE_DOUBLE
  146 array_type: . primitive_type OPEN_COLC CLOSE_COLC
  223 class_member_declaration: STATIC . field_or_method_declaration
  224 field_or_method_declaration: . field_declaration
  225                            | . method_declaration
  226 method_declaration: . method_header method_body
  227 method_header: . result_type method_declarator
  228 result_type: . primitive_type
  229            | . array_type
  230            | . VOID
  241 field_declaration: . field_modifiers_ primitive_type variable_declarators PT_VIRGULA
  242                  | . field_modifiers_ primitive_type OPEN_COLC CLOSE_COLC variable_declarators PT_VIRGULA
  243 field_modifiers_: . field_modifier field_modifiers_
  244                 | .  [TYPE_INT, TYPE_SHORT, TYPE_LONG, TYPE_BYTE, TYPE_BOOL, TYPE_FLOAT, TYPE_DOUBLE, TYPE_CHAR, TYPE_STRING]
  245 field_modifier: . FINAL
  246               | . TRANSIENT
  247               | . VOLATILE

    VOID         shift, and go to state 13
    TYPE_INT     shift, and go to state 14
    TYPE_SHORT   shift, and go to state 15
    TYPE_LONG    shift, and go to state 16
    TYPE_BYTE    shift, and go to state 17
    TYPE_BOOL    shift, and go to state 18
    TYPE_FLOAT   shift, and go to state 19
    TYPE_DOUBLE  shift, and go to state 20
    TYPE_CHAR    shift, and go to state 21
    TYPE_STRING  shift, and go to state 22
    FINAL        shift, and go to state 23
    TRANSIENT    shift, and go to state 24
    VOLATILE     shift, and go to state 25

    TYPE_INT     [reduce using rule 244 (field_modifiers_)]
    TYPE_SHORT   [reduce using rule 244 (field_modifiers_)]
    TYPE_LONG    [reduce using rule 244 (field_modifiers_)]
    TYPE_BYTE    [reduce using rule 244 (field_modifiers_)]
    TYPE_BOOL    [reduce using rule 244 (field_modifiers_)]
    TYPE_FLOAT   [reduce using rule 244 (field_modifiers_)]
    TYPE_DOUBLE  [reduce using rule 244 (field_modifiers_)]
    TYPE_CHAR    [reduce using rule 244 (field_modifiers_)]
    TYPE_STRING  [reduce using rule 244 (field_modifiers_)]

    primitive_type               go to state 26
    numeric_type                 go to state 27
    integral_type                go to state 28
    floating_point_type          go to state 29
    array_type                   go to state 30
    field_or_method_declaration  go to state 31
    method_declaration           go to state 32
    method_header                go to state 33
    result_type                  go to state 34
    field_declaration            go to state 35
    field_modifiers_             go to state 36
    field_modifier               go to state 37


state 10

    4 class_body: BEG class_body_declaration . END

    END  shift, and go to state 38


state 11

    5 class_body_declaration: class_member_declaration_opt . static_initializer class_member_declaration_opt
    6 static_initializer: . PUBLIC STATIC VOID MAIN OPEN_PAREN TYPE_STRING OPEN_COLC CLOSE_COLC ARGS CLOSE_PAREN block

    PUBLIC  shift, and go to state 39

    static_initializer  go to state 40


state 12

  219 class_member_declaration_opt: class_member_declaration . class_member_declaration_
  221 class_member_declaration_: . class_member_declaration class_member_declaration_
  222                          | .  [END, PUBLIC]
  223 class_member_declaration: . STATIC field_or_method_declaration

    STATIC  shift, and go to state 9

    $default  reduce using rule 222 (class_member_declaration_)

    class_member_declaration_  go to state 41
    class_member_declaration   go to state 42


state 13

  230 result_type: VOID .

    $default  reduce using rule 230 (result_type)


state 14

   26 integral_type: TYPE_INT .

    $default  reduce using rule 26 (integral_type)


state 15

   25 integral_type: TYPE_SHORT .

    $default  reduce using rule 25 (integral_type)


state 16

   27 integral_type: TYPE_LONG .

    $default  reduce using rule 27 (integral_type)


state 17

   24 integral_type: TYPE_BYTE .

    $default  reduce using rule 24 (integral_type)


state 18

   20 primitive_type: TYPE_BOOL .

    $default  reduce using rule 20 (primitive_type)


state 19

   29 floating_point_type: TYPE_FLOAT .

    $default  reduce using rule 29 (floating_point_type)


state 20

   30 floating_point_type: TYPE_DOUBLE .

    $default  reduce using rule 30 (floating_point_type)


state 21

   28 integral_type: TYPE_CHAR .

    $default  reduce using rule 28 (integral_type)


state 22

   21 primitive_type: TYPE_STRING .

    $default  reduce using rule 21 (primitive_type)


state 23

  245 field_modifier: FINAL .

    $default  reduce using rule 245 (field_modifier)


state 24

  246 field_modifier: TRANSIENT .

    $default  reduce using rule 246 (field_modifier)


state 25

  247 field_modifier: VOLATILE .

    $default  reduce using rule 247 (field_modifier)


state 26

  146 array_type: primitive_type . OPEN_COLC CLOSE_COLC
  228 result_type: primitive_type .  [ID]

    OPEN_COLC  shift, and go to state 43

    $default  reduce using rule 228 (result_type)


state 27

   19 primitive_type: numeric_type .

    $default  reduce using rule 19 (primitive_type)


state 28

   22 numeric_type: integral_type .

    $default  reduce using rule 22 (numeric_type)


state 29

   23 numeric_type: floating_point_type .

    $default  reduce using rule 23 (numeric_type)


state 30

  229 result_type: array_type .

    $default  reduce using rule 229 (result_type)


state 31

  223 class_member_declaration: STATIC field_or_method_declaration .

    $default  reduce using rule 223 (class_member_declaration)


state 32

  225 field_or_method_declaration: method_declaration .

    $default  reduce using rule 225 (field_or_method_declaration)


state 33

    7 block: . BEG block_statements END
  226 method_declaration: method_header . method_body
  232 method_body: . block
  233            | . PT_VIRGULA
  234            | .  [END, STATIC, PUBLIC]

    BEG         shift, and go to state 44
    PT_VIRGULA  shift, and go to state 45

    $default  reduce using rule 234 (method_body)

    block        go to state 46
    method_body  go to state 47


state 34

    3 identifier: . ID
  227 method_header: result_type . method_declarator
  231 method_declarator: . identifier OPEN_PAREN formal_parameter_list CLOSE_PAREN

    ID  shift, and go to state 4

    identifier         go to state 48
    method_declarator  go to state 49


state 35

  224 field_or_method_declaration: field_declaration .

    $default  reduce using rule 224 (field_or_method_declaration)


state 36

   19 primitive_type: . numeric_type
   20               | . TYPE_BOOL
   21               | . TYPE_STRING
   22 numeric_type: . integral_type
   23             | . floating_point_type
   24 integral_type: . TYPE_BYTE
   25              | . TYPE_SHORT
   26              | . TYPE_INT
   27              | . TYPE_LONG
   28              | . TYPE_CHAR
   29 floating_point_type: . TYPE_FLOAT
   30                    | . TYPE_DOUBLE
  241 field_declaration: field_modifiers_ . primitive_type variable_declarators PT_VIRGULA
  242                  | field_modifiers_ . primitive_type OPEN_COLC CLOSE_COLC variable_declarators PT_VIRGULA

    TYPE_INT     shift, and go to state 14
    TYPE_SHORT   shift, and go to state 15
    TYPE_LONG    shift, and go to state 16
    TYPE_BYTE    shift, and go to state 17
    TYPE_BOOL    shift, and go to state 18
    TYPE_FLOAT   shift, and go to state 19
    TYPE_DOUBLE  shift, and go to state 20
    TYPE_CHAR    shift, and go to state 21
    TYPE_STRING  shift, and go to state 22

    primitive_type       go to state 50
    numeric_type         go to state 27
    integral_type        go to state 28
    floating_point_type  go to state 29


state 37

  243 field_modifiers_: . field_modifier field_modifiers_
  243                 | field_modifier . field_modifiers_
  244                 | .  [TYPE_INT, TYPE_SHORT, TYPE_LONG, TYPE_BYTE, TYPE_BOOL, TYPE_FLOAT, TYPE_DOUBLE, TYPE_CHAR, TYPE_STRING]
  245 field_modifier: . FINAL
  246               | . TRANSIENT
  247               | . VOLATILE

    FINAL      shift, and go to state 23
    TRANSIENT  shift, and go to state 24
    VOLATILE   shift, and go to state 25

    $default  reduce using rule 244 (field_modifiers_)

    field_modifiers_  go to state 51
    field_modifier    go to state 37


state 38

    4 class_body: BEG class_body_declaration END .
